<resources>
    <string name="app_name">PruebaFirebaseAuth</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="et_mail">Email</string>
    <string name="et_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="no_datos">Ambos campos son obligatorios</string>
    <string name="pwd_corta">La contraseña debe tener al menos 8 caracteres</string>
    <string name="msj_registrado">Usuario registrado correctamente</string>
    <string name="msj_no_registrado">Error El usuario no se ha podido registrar correctamente</string>
    <string name="pwd_incorrecta">La contraseña no es correcta</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_delete">Delete user</string>
    <string name="btn_set_value">Probar Set Value</string>
    <string name="btn_push">Probar Push</string>
    <string name="btn_updateChildren">Update Children</string>
    <string name="btn_set_value_obj">Probar Set Value Obj</string>
    <string name="btn_updateChildrenObj">Probar Update Children con objetos</string>
    <string name="btn_modificarAtr">Probar Modificar Atributo</string>
    <string name="btn_remove">Probar Remove</string>
    <string name="btn_set_value_null">Set value null</string>
    <string name="btnLeerValue">Leer Value</string>
    <string name="btnLeerObj">Leer Objeto</string>
    <string name="btn_leer_child">Leer Child</string>
</resources>