<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margen"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        app:layout_constraintRight_toRightOf="parent">

    </Button>

    <LinearLayout
        android:id="@+id/llInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSetValue"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btn_logout"
            android:layout_marginTop="@dimen/margen"
            android:text="@string/btn_set_value"
            android:layout_weight="1"
            android:layout_height="wrap_content">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   ">

        </TextView>

        <Button
            android:id="@+id/btnPush"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margen"
            android:text="@string/btn_push"
            android:layout_weight="1"
            android:layout_height="wrap_content">
        </Button>


    </LinearLayout>

    <Button
        android:id="@+id/btnUpdateChildern"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margen"
        app:layout_constraintTop_toBottomOf="@id/llInsert"
        android:text="@string/btn_updateChildren"
        android:layout_height="wrap_content">
    </Button>

    <Button
        android:id="@+id/btnSetValueObj"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/btn_set_value_obj"
        app:layout_constraintTop_toBottomOf="@id/btnUpdateChildern"
        android:layout_height="wrap_content">
    </Button>

    <Button
        android:id="@+id/btnUpdateChildrenObj"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/btn_updateChildrenObj"
        app:layout_constraintTop_toBottomOf="@id/btnSetValueObj"
        android:layout_height="wrap_content">
    </Button>

    <Button
        android:id="@+id/btnModifAtr"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margen"
        android:text="@string/btn_modificarAtr"
        app:layout_constraintTop_toBottomOf="@id/btnUpdateChildrenObj"
        android:layout_height="wrap_content">
    </Button>

    <LinearLayout
        android:id="@+id/llBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnModifAtr">

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_remove"
            android:layout_weight="1">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   ">

        </TextView>

        <Button
            android:id="@+id/btnSetValueNull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_value_null"
            android:layout_weight="1">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLeer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llBorrar">

        <Button
            android:id="@+id/btnLeerValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnLeerValue">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="   ">

        </TextView>

        <Button
            android:id="@+id/btnLeerObj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnLeerObj">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLeer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llLeer">

        <Button
            android:id="@+id/btnLeerChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_leer_child">

        </Button>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>