<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margen"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

    </EditText>

    <EditText
        android:id="@+id/et_passowrd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:layout_editor_absoluteX="16dp">

    </EditText>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margen"
        app:layout_constraintTop_toBottomOf="@+id/et_passowrd">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:layout_marginRight="@dimen/margen"
            android:layout_weight="1">
        </Button>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:layout_marginLeft="@dimen/margen"
            android:layout_weight="1">
        </Button>

    </LinearLayout>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_buttons"
        android:text="@string/btn_delete">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>